# SubCensus

./: .gitattributes  .gitignore  CLAUDE.md  README.md
pi/: CLAUDE.md  README.md  config.example.yaml  install.sh  pyproject.toml
pi/subcensuspi/: __init__.py  analyze_place.py  brain.py  brain_export.py  config.py  db.py  export_place.py  fieldmap.py  live_sweep.py  mqtt.py  occupancy_pass.py  paths.py  plausibility.py  radio.py  readings.py  redecode.py  taxonomy.py
pi/subcensuspi/collector/: __init__.py  collector.py  main.py  multi.py  parser.py  priority.py  rtl433.py  unknowns.py
pi/subcensuspi/dsp/: __init__.py  cadence.py  crc.py  diff.py  feature.py  knn.py  occupancy.py  pulse.py  sub.py
pi/subcensuspi/systemd/: subcensuspi-collector.service  (+2 more)
pi/tests/: conftest.py  test_admin_api.py  test_brain.py  test_brain_export.py  test_collector.py  test_device_detail.py  test_dsp_parity.py  test_export_place.py  test_fieldmap.py  test_live_sweep.py  test_mqtt.py  test_multi.py  test_occupancy_pass.py  test_places.py  test_plausibility.py  test_radio.py  test_readings.py  test_redecode.py  test_runtime.py  test_taxonomy.py  test_unknowns.py  test_web.py
tools/: analyze_place.py  build_signatures.py  check.py  export_place.py  mcp_server.py  pyproject.toml
tools/debug/: flipper_drive.py  flipper_screen.py  flipper_serial.py
tools/subcensus_tools/: __init__.py  brain.py  codegen.py  fieldmap.py  paths.py  place_bundle.py  schema.py  taxonomy.py
tools/tests/: test_brain.py  test_codegen.py  test_debug.py  test_fieldmap.py  test_mcp_server.py  test_place_export.py  test_schema.py  test_taxonomy.py
(+189 files in other folders)
