[project]
name = "subcensuspi"
version = "0.1.0"
description = "SubCensusPi — stationary RTL-SDR / Raspberry Pi ISM census: rtl_433 collector, SQLite catalog, FastAPI dashboard, MQTT/HA discovery. Shares the SubCensus data + intelligence layer (System doc)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "paho-mqtt>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "subcensuspi",
    "subcensuspi.dsp",
    "subcensuspi.collector",
    "subcensuspi.web",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
