[project]
name = "subcensus-tools"
version = "0.1.0"
description = "SubCensus host-side tools: codegen, schema validation, brain build, place export/analysis, and the Flipper serial-RPC debug harness."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
# Serial harness (tools/debug/) — optional so core codegen/schema work needs no serial stack.
serial = [
    "pyserial>=3.5",
]

[project.scripts]
subcensus-codegen = "subcensus_tools.codegen:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["subcensus_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
